--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "jest --colors --watch"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,6 +14,10 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.6.7",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
