router and controller tests, React testing

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test": "jest --colors --watch"
+    "test": "jest --colors"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
